fix: DeleteProject, UpdateProject swagger annotations, update create_deployment query to check if project has been deleted
