# api/docs/swagger.json
@@ -112,6 +112,13 @@
                 "summary": "Update a project",
                 "parameters": [
                     {
+                        "type": "integer",
+                        "description": "Project ID",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
                         "description": "Project details",
                         "name": "projectDetails",
                         "in": "body",
@@ -119,6 +126,45 @@
                         "schema": {
                             "$ref": "#/definitions/projects.UpdateProjectRequest"
                         }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "api.v1",
+                    "project"
+                ],
+                "summary": "Delete a project",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Project ID",
+                        "name": "projectId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -306,7 +352,7 @@
                     "api.v1",
                     "project"
                 ],
-                "summary": "Delete a project",
+                "summary": "Spin down a preview deployment",
                 "parameters": [
                     {
                         "type": "integer",
@@ -314,15 +360,18 @@
                         "name": "projectId",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Deployment ID",
+                        "name": "deploymentId",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "204": {
                         "description": "No Content"
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
                     },
                     "401": {
                         "description": "Unauthorized"
